Fix pre code formatted. Align elements.

--- a/css/_sass/article.sass
+++ b/css/_sass/article.sass
@@ -58,6 +58,9 @@ code
   background-color: $secondary-color-lighten
   color: $background-color
   padding: 0px 10px
+  overflow: auto
+  // word-wrap: normal
+  // white-space: pre
 
 pre code
   display: block
@@ -79,22 +82,18 @@ table
 
 // Header
 header
+  color: white
   hgroup
-
     h1
-      display: block
       position: relative
       top: 180px
       width: 100%
-      margin: 0 auto
       text-align: center
       color: white
     h2
-      display: block
       position: relative
       top: 180px
       width: 100%
-      margin: 0 auto
       text-align: center
       color: white
   a
@@ -106,7 +105,7 @@ header
     width: 93px
     height: 34px
     line-height: 34px
-    color: white
+    // color: white
     border-radius: 5px
     border: solid 1px rgba(255, 255, 255, 0.4)
   time
@@ -118,6 +117,6 @@ header
     width: 93px
     height: 34px
     line-height: 34px
-    color: white
+    // color: white
     border-radius: 5px
     border: solid 1px rgba(255, 255, 255, 0.4)
