--- a/css/_sass/main.sass
+++ b/css/_sass/main.sass
@@ -47,7 +47,6 @@ html
             font-weight: 700
             color: $secondary-color
             padding-bottom: 10px
-            font-size: 1.6em
           ul
             font-weight: lighter
             padding: 0px 0px 0px 40px
@@ -55,21 +54,16 @@ html
               color: #29598C
               width: 100%
               margin: 10px 0px
-              line-height: 1em
+              font-size: 0.8em
+              line-height: 130%
+              font-weight: 500
               a
-                font-size: 0.7em
-                font-weight: 500
-                line-height: 19px
                 color: #428FE0
               span
-                font-size: 12px
+                font-size: 0.7em
                 background-color: #999
                 border-radius: 10px
-                font-weight: bold
-                line-height: 1
                 color: #fff
-                text-align: center
-                white-space: nowrap
                 padding: 0px 5px
                 margin: 0px 5px
               time
@@ -77,7 +71,6 @@ html
                 color: #c9c9c9
                 text-shadow: 1px 1px #fff
                 font-weight: 100
-                font-size: 0.7em
       footer
         @include box-sizing(border-box)
         width: 80%
