--- a/css/_sass/main_phone.sass
+++ b/css/_sass/main_phone.sass
@@ -1,6 +1,6 @@
 
 html body
-  // font-size: 12px
+  font-size: 10px
   aside
     z-index: 1
     overflow: auto
@@ -8,22 +8,18 @@ html body
   section
     padding: 0
     article
-      width: 95%
+      width: 100%
+      padding: 0 10px
       header
-        width: 105.5%
-        margin: 0 -3%
-      p
-        font-size: 1em
+        width: 100%
+        margin: 0
       #recent-post
-        padding: 10px 10px
+        padding: 10px
         ul
           padding: 0
           list-style: none
-          li
-            a
-              font-size: 0.5em
-            time
-              font-size: 0.5em
     footer
-      font-size: 0.6em
+      width: 100%
+      padding: 0 10px
+
 
