--- a/css/_sass/mq.sass
+++ b/css/_sass/mq.sass
@@ -1,3 +1,3 @@
 // Phone
-@media all and (max-width: 699px) and (min-width: 320px)
+@media all and (min-width: 320px) and (max-width: 480px)
   @import main_phone
